--- a/examples/Sample.ipynb
+++ b/examples/Sample.ipynb
@@ -2,8 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dotenv extension is already loaded. To reload it, use:\n",
+      "  %reload_ext dotenv\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext dotenv\n",
     "%dotenv\n",
@@ -21,13 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
-      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x1e5d05194c0>"
+      "text/plain": "<signals_notebook.api.SignalsNotebookApi at 0x17a6413f730>"
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "from signals_notebook.entities.entity_store import EntityStore"
@@ -59,134 +68,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
-    "sample = EntityStore.get('sample:ef8f39e5-3309-4f85-abd6-3ceedce0d8a6')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:ef8f39e5-3309-4f85-abd6-3ceedce0d8a6', digest='31720794', name='Sample-1777', description='', created_at=datetime.datetime(2022, 6, 13, 13, 55, 51, 150000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 16, 11, 24, 24, 461000, tzinfo=datetime.timezone.utc))"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sample"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
-   "source": [
-    "for item in sample:\n",
-    "    if item.id == '2':\n",
-    "        item.content.set_value('5545')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id=UUID('b718adec-73e0-3ce3-ac72-0dd11a06a308') name='ID' content=CellPropertyContent(value='Sample-1777', name=None, eid=None, values=None)\n",
-      "id=UUID('278c491b-dd8a-3361-8c14-9c4ac790da34') name='Template' content=CellPropertyContent(value='Sample', name=None, eid=None, values=None)\n",
-      "id='digests.self' name=None content=CellPropertyContent(value=None, name=None, eid=None, values=None)\n",
-      "id='digests.external' name=None content=CellPropertyContent(value=None, name=None, eid=None, values=None)\n",
-      "id='1' name='Created Date' content=CellPropertyContent(value='2022-06-13T13:55:51.211451408Z', name=None, eid=None, values=None)\n",
-      "id='2' name='Description' content=CellPropertyContent(value='5545', name=None, eid=None, values=None)\n",
-      "id='3' name='Comments' content=CellPropertyContent(value='999', name=None, eid=None, values=None)\n",
-      "id='4' name='Amount' content=CellPropertyContent(value=None, name=None, eid=None, values=None)\n",
-      "id='10' name='Attached Docs' content=CellPropertyContent(value='0', name=None, eid='sample:ef8f39e5-3309-4f85-abd6-3ceedce0d8a6', values=None)\n",
-      "id='sampleId' name='ID' content=CellPropertyContent(value='sample:ef8f39e5-3309-4f85-abd6-3ceedce0d8a6', name=None, eid=None, values=None)\n",
-      "id='sourceName' name='Template' content=CellPropertyContent(value='Sample', name=None, eid=None, values=None)\n"
+      "{'data': {'type': <EntityType.EXPERIMENT: 'experiment'>, 'attributes': {'name': 'Sample SDK'}}}\n"
      ]
     }
    ],
    "source": [
-    "for item in sample:\n",
-    "    print(item)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
-   "source": [
-    "sample.save()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [],
-   "source": [
-    "from signals_notebook.entities import Sample\n",
-    "experiment = EntityStore.get(\"experiment:f7fb12b2-1180-4fa0-9bcd-ccc2f7ec0e8f\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
-   "source": [
-    "from signals_notebook.entities import SampleProperty\n",
-    "from signals_notebook.entities.samples.cell import CellPropertyContent\n",
+    "from signals_notebook.entities import Sample, Experiment\n",
     "\n",
-    "new_sample_property = SampleProperty(\n",
-    "    id='3',\n",
-    "    content=CellPropertyContent(value='create_NEW_SAMPLE'),\n",
-    ")\n",
+    "experiment = Experiment.create(name='Sample SDK')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'data': {'type': <EntityType.SAMPLE: 'sample'>, 'attributes': {}, 'relationships': {'template': {'data': {'type': <EntityType.SAMPLE: 'sample'>, 'id': 'sample:fcaa5e11-ace8-4d2c-a212-293dad3c2122'}}, 'ancestors': {'data': [{'type': <EntityType.EXPERIMENT: 'experiment'>, 'id': 'experiment:2a7bd32d-c1da-4bbc-abe7-29feb4adf2cf'}]}}}}\n"
+     ]
+    }
+   ],
+   "source": [
     "template_sample = EntityStore.get('sample:fcaa5e11-ace8-4d2c-a212-293dad3c2122')\n",
     "new_sample = Sample.create(\n",
-    "    properties=[new_sample_property],\n",
     "    template=template_sample,\n",
     "    ancestors=[experiment],\n",
     ")"
@@ -200,13 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "outputs": [
     {
      "data": {
-      "text/plain": "Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:8c1abb55-7aed-48f2-9147-d7d1f5cffa26', digest='87234418', name='Sample-1783', description='', created_at=datetime.datetime(2022, 6, 17, 9, 30, 40, 774000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 6, 17, 9, 30, 40, 774000, tzinfo=datetime.timezone.utc))"
+      "text/plain": "Sample(type=<EntityType.SAMPLE: 'sample'>, eid='sample:b869772f-240c-4fea-a7e5-b74c6b9d2347', digest='73687306', name='Sample-1835', description='', created_at=datetime.datetime(2022, 8, 19, 10, 17, 34, 910000, tzinfo=datetime.timezone.utc), edited_at=datetime.datetime(2022, 8, 19, 10, 17, 34, 910000, tzinfo=datetime.timezone.utc))"
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,11 +141,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
+   "outputs": [],
+   "source": [
+    "for item in new_sample:\n",
+    "    if item.id == '2':\n",
+    "        item.content.set_value('5545')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id='b718adec-73e0-3ce3-ac72-0dd11a06a308' name='ID' content=SampleCellContent(value='Sample-1835', name=None, eid=None, values=None)\n",
+      "id='278c491b-dd8a-3361-8c14-9c4ac790da34' name='Template' content=SampleCellContent(value='Sample', name=None, eid=None, values=None)\n",
+      "id='digests.self' name=None content=SampleCellContent(value=None, name=None, eid=None, values=None)\n",
+      "id='digests.external' name=None content=SampleCellContent(value=None, name=None, eid=None, values=None)\n",
+      "id='1' name='Created Date' content=SampleCellContent(value='2022-08-19T10:17:35.117442250Z', name=None, eid=None, values=None)\n",
+      "id='2' name='Description' content=SampleCellContent(value='5545', name=None, eid=None, values=None)\n",
+      "id='3' name='Comments' content=SampleCellContent(value=None, name=None, eid=None, values=None)\n",
+      "id='4' name='Amount' content=SampleCellContent(value=None, name=None, eid=None, values=None)\n",
+      "id='10' name='Attached Docs' content=SampleCellContent(value='0', name=None, eid='sample:b869772f-240c-4fea-a7e5-b74c6b9d2347', values=None)\n",
+      "id='sampleId' name='ID' content=SampleCellContent(value='sample:b869772f-240c-4fea-a7e5-b74c6b9d2347', name=None, eid=None, values=None)\n",
+      "id='sourceName' name='Template' content=SampleCellContent(value='Sample', name=None, eid=None, values=None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in new_sample:\n",
+    "    print(item)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [],
+   "source": [
+    "new_sample.save()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "new_sample.delete()"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [],
+   "source": [
+    "experiment.delete()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
